// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePagination /> should match snapshot for hasNext 1`] = `
<nav
  aria-label="pagination"
  class="pagination"
>
  <button
    aria-label="previous page"
    class="root variantSecondary small rounded iconOnly chevron disabled"
    disabled=""
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328.747 353.707L231.04 256l97.707-97.92-30.08-30.08-128 128 128 128 30.08-30.293z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;

exports[`<SimplePagination /> should match snapshot for hasNext and hasPrevious 1`] = `
<nav
  aria-label="pagination"
  class="pagination"
>
  <button
    aria-label="previous page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328.747 353.707L231.04 256l97.707-97.92-30.08-30.08-128 128 128 128 30.08-30.293z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;

exports[`<SimplePagination /> should match snapshot for hasPrevious 1`] = `
<nav
  aria-label="pagination"
  class="pagination"
>
  <button
    aria-label="previous page"
    class="root variantSecondary small rounded iconOnly chevron"
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328.747 353.707L231.04 256l97.707-97.92-30.08-30.08-128 128 128 128 30.08-30.293z"
          />
        </svg>
      </i>
    </div>
  </button>
  <button
    aria-label="next page"
    class="root variantSecondary small rounded iconOnly chevron disabled"
    disabled=""
    type="button"
  >
    <div
      class="body"
    >
      <i
        class="root icon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
  </button>
</nav>
`;
